1.5.2
=====
- Relax overly tight dependency specification. Removed pyup.io it is not suitable for packages.

1.5
===
- Improvements to sphinx autodoc generation
- Improvements to enum support

1.0b2
=====
- Added a redesigned CSV codec Reader to address issues with handling row-by-row processing and handling of row-level errors.
- Removed filter-query (moved to feature branch)

0.10b9
======
- Added support for MultiPartField field type. A virtual field that allows for the easy generation of key values
  composed of several other fields.
- Documentation updates and some initial type hints added (using :type... style) 
- Allow a virtual field to be identified as a key
- Introduce a common base class for ALL field types, this allows them to be identified separatly via hash (for sorting and keys)
- Tweaked the new string.empty option so by default it behaves in the same way as it was previously defined (eg null assumes empty)

0.10b
=====
- Possible breaking change with date and time serializers, they no longer apply a timezone as this is expected to be
  managed by date and time fields.
- Added getmeta tool for getting meta data.
- Changes to Resource/Meta options to allow for them to be overridden.
- Fixes regarding ResourceBase/Resource changes

0.9
===
- Fixed bug preparing naive date and time values.

0.9a0
=====

- Support for multipart keys.
- Support for naive dates and times.
- Boolean fields now accept y/n as truthy
- Change of Resource iterable base class

0.8.2
=====

- Migrated all tests to py.test
- Support for Python 2.6 for _most_ features (some contrib features are not supported see docs for detail)

0.8.1
=====

- Bug fix for compatibility.deprecated decorator. Was breaking baldr when handling classes.
- Some documentation fixes.

0.8
===

- Added key_fields to resource meta options. This allows definition of which field(s) are used to uniquely identify the
  resource.