@@ -1,5 +1,6 @@
 1.5.2
 =====
+- Remove encoding option for msgpack (this has been removed from msgpack itself)
 - Relax overly tight dependency specification. Removed pyup.io it is not suitable for packages.
 
 1.5
